--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -7,10 +7,10 @@ build:
 
 python:
   install:
-    - requirements: docs/requirements.txt 
+    - requirements: docs/requirements.txt
     # Install our python package before building the docs 
-    - method: pip 
-      path .
+    - method: pip
+      path: .
 
 sphinx: 
   fail_on_warning: true 
